<resources>
    <string name="app_name">EXAMINE</string>
    <string name="sec">Bir saniye...</string>
    <string name="working">Yükleniyor</string>
    <string name="password_mismatch">Parola Uyuşmuyor</string>
    <string name="email_not_valid">Geçersiz Email Adresi</string>
    <string name="check_fields">Lütfen alanları tekrar kontrol ediiniz</string>
    <string name="no_space">Kullanıcı adı boşluk içeremez!</string>
    <string name="email_kulladi_text">Email veya Kullanıcı Adı</string>
    <string name="parola_text">Parola</string>
    <string name="giris_yap_text">GİRİŞ YAP</string>
    <string name="appname_footer">2021 EXAMINE</string>
    <string name="cikis_yap_text">ÇIKIŞ YAP</string>
    <string name="menu4_text">SINAV AYARLARI</string>
    <string name="menu3_text">SINAV EKLE</string>
    <string name="menu2_text">SORULAR</string>
    <string name="menu1_text">SORU EKLE</string>
    <string name="hesap_olustur_text">HESAP OLUŞTUR</string>
    <string name="parola_tekrar_text">Parola Tekrar</string>
    <string name="kullaniciadi_text">Kullanıcı Adı</string>
    <string name="ad_soyad_text">Ad Soyad</string>
    <string name="menu_text">MENU</string>
    <string name="soruyu_girin_text">SORUYU GİRİNİZ</string>
    <string name="soru_text">SORU:</string>
    <string name="zorluk_seviye_text">ZORLUK SEVİYESİ</string>
    <string name="soru_ek_text">SORU EKİ</string>
    <string name="sec5_text">5.Seçeneği Giriniz</string>
    <string name="sec4_text">4.Seçeneği Giriniz</string>
    <string name="sec3_text">3.Seçeneği Giriniz</string>
    <string name="sec2_text">2.Seçeneği Giriniz*</string>
    <string name="sec1_text">1.Seçeneği Giriniz*</string>
    <string name="radio1">1</string>
    <string name="radio2">2</string>
    <string name="radio3">3</string>
    <string name="radio4">4</string>
    <string name="radio5">5</string>
    <string name="kaydet_text">KAYDET</string>
    <string name="soru_ekle_text">SORU EKLE</string>
    <string name="sil_text">SİL</string>
    <string name="guncelle_text">GÜNCELLE</string>
    <string name="dogru_cevap_sec_text">DOĞRU CEVAP SEÇENEĞİ</string>
    <string name="secenekler_text">SEÇENEKLER</string>
    <string name="sinav_suresi_text">SINAV SÜRESİ (dk)</string>
    <string name="sinav_puani_text">SINAV PUANI</string>
    <string name="sinav_adi_text">SINAV ADI</string>
    <string name="sinav_ad_gir_text">Sınav Adını Giriniz</string>
    <string name="sinav_sure_gir_text">Sınav Süresini Giriniz</string>
    <string name="sinav_puan_gir_text">Sınav Puanını Giriniz</string>
    <string name="yok_text">YOK</string>
    <string name="dogru_cevap_text">DOĞRU CEVAP</string>
    <string name="duzenle_text">DÜZENLE</string>
    <string name="goruntule_text">GÖRÜNTÜLE</string>
</resources>
