<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".AddQuestionActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/soru_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/soru_baslik"
        android:inputType="textCapSentences|textMultiLine"
        style="@style/LoginSignUp1Input"
        android:hint="@string/soruyu_girin_text"
        android:background="@color/grey_5"
        android:textColorHint="@color/cardview_dark_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-30dp"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="35dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginRight="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:visibility="visible"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_middle">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:text="@string/secenekler_text"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp"
                                android:textStyle="bold"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal"
                                android:layout_marginTop="2dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <EditText
                                        android:inputType="text"
                                        android:id="@+id/sec1_field"
                                        style="@style/LoginSignUp1Input"
                                        android:hint="@string/sec1_text"
                                        android:background="@color/grey_5"
                                        android:textColorHint="@color/cardview_dark_background"/>
                                    <EditText
                                        android:inputType="text"
                                        android:id="@+id/sec2_field"
                                        style="@style/LoginSignUp1Input"
                                        android:hint="@string/sec2_text"
                                        android:background="@color/grey_5"
                                        android:textColorHint="@color/cardview_dark_background"/>
                                    <EditText
                                        android:inputType="text"
                                        android:id="@+id/sec3_field"
                                        style="@style/LoginSignUp1Input"
                                        android:hint="@string/sec3_text"
                                        android:background="@color/grey_5"
                                        android:textColorHint="@color/cardview_dark_background"/>
                                    <EditText
                                        android:inputType="text"
                                        android:id="@+id/sec4_field"
                                        style="@style/LoginSignUp1Input"
                                        android:hint="@string/sec4_text"
                                        android:background="@color/grey_5"
                                        android:textColorHint="@color/cardview_dark_background"/>
                                    <EditText
                                        android:inputType="text"
                                        android:id="@+id/sec5_field"
                                        style="@style/LoginSignUp1Input"
                                        android:hint="@string/sec1_text"
                                        android:background="@color/grey_5"
                                        android:textColorHint="@color/cardview_dark_background"/>

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:text="@string/dogru_cevap_sec_text"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp"
                                android:textStyle="bold"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal"
                                android:layout_marginTop="2dp">
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">
                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/radio1"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">
                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/radio2"
                                        android:checked="true"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">
                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/radio3"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">
                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/radio4"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">
                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/radio5" />
                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:visibility="visible"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/logout_c"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_rounded_orange"
                                android:clickable="true"
                                android:focusable="true"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:paddingRight="10dp"
                                android:paddingBottom="5dp"
                                android:layout_margin="5dp">

                                <Button
                                    android:id="@+id/back_menu"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:background="@drawable/shape_rounded_orange"
                                    android:text="@string/soru_ek_text"
                                    android:textAlignment="center"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                                    android:textColor="@android:color/white"
                                    android:textSize="15dp"
                                    android:textStyle="bold"/>

                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/kaydet_soru"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_rounded_new"
                                android:clickable="true"
                                android:focusable="true"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:paddingRight="10dp"
                                android:paddingBottom="5dp"
                                android:layout_margin="5dp">

                                <Button
                                    android:id="@+id/kaydet_soru_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:background="@color/button_bluee"
                                    android:text="@string/kaydet_text"
                                    android:textAlignment="center"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                                    android:textColor="@android:color/white"
                                    android:textSize="15dp"
                                    android:textStyle="bold"/>

                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>